@@ -46,9 +46,8 @@ public:
 	 */
 	symbol_entry const * insert(symbol_entry const &);
 
-	/// find the symbol at the given filename and line number, if any
-	symbol_entry const * find(debug_name_id filename,
-	                          size_t linenr) const;
+	/// find the symbols at the given filename and line number, if any
+	symbol_collection find(debug_name_id filename, size_t linenr) const;
 
 	/// find the symbol with the given image_name vma if any
 	symbol_entry const * find_by_vma(std::string const & image_name,
